--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -30,6 +30,7 @@ body {
 	padding: 1rem;
 	> img {
 		width: 100px;
+		height: auto;
 		margin-left: 2rem;
 	}
 	> div {
